# DeepEye-SQL

./: .gitignore  README.md  pyproject.toml
app/config/: __init__.py  config.py
app/dataset/: __init__.py  artifacts.py  dataset.py  legacy.py  spider2_dataset.py  utils.py
app/db_utils/: __init__.py  cloud_execution.py  cloud_schema.py  execution.py  schema.py
app/llm/: llm.py
app/llm_extractor/: extractor.py
app/logger/: logger.py
app/pipeline/: __init__.py  validation.py
app/prompt/: factory.py  prompt_template.py  spider2_prompt_template.py
app/services/: __init__.py  artifact_store.py  execution_service.py  schema_service.py
app/vector_db/: __init__.py  local_index.py  vector_db.py
config/: config-bird-example.toml  config-example.toml  config-spider-example.toml  config-spider2-example.toml  config-spider2-lite-example.toml  config-spider2-snow-example.toml  config-spider2.toml
results/bird-dev/: gemma3-27b.json  qwen2.5-coder-32b.json  qwen3-coder-30b-a3b.json
runner/: benchmark_execution.py  clear_sqlite_schema_linking.py  convert_pkl_to_spider2_sql.py  convert_pkl_to_sql.py  convert_pkl_to_sql_file.py  convert_snapshot_to_sql.py  create_vector_db.py  create_vector_db_parallel.py  evaluation.py  evaluation_spider2.py  migrate_legacy_snapshot.py  preprocess_dataset.py  run_schema_linking.py  run_sql_generation.py  run_sql_revision.py  run_sql_selection.py  run_value_retrieval.py  test_spider2_dataset.py
script/: download_dataset.sh  install_env.sh  make_vector_db.sh  run_pipeline.sh  run_spider2_lite_pipeline.sh
(+1128 files in other folders)
