[project]
name = "beta-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=1.0.21",
    "gdown>=5.2.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "modelscope>=1.29.2",
    "openai>=1.107.2",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.11.0",
]
